local_run/envoy.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 15000
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: service_cluster
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      '@type': >-
                        type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: service_cluster
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      health_checks:
        - interval: 2s
          timeout: 3s
          no_traffic_interval: 4s
          no_traffic_healthy_interval: 4s
          unhealthy_threshold: 1
          healthy_threshold: 1
          http_health_check:
            path: "/healthz"
      load_assignment:
        cluster_name: service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: app1
                      port_value: 10000
              - endpoint:
                  address:
                    socket_address:
                      address: app2
                      port_value: 10001
              - endpoint:
                  address:
                    socket_address:
                      address: app3
                      port_value: 10002
